; ModuleID = '/home/carl/AnghaBench/reactos/sdk/lib/rtl/extr_timerqueue.c_timer_cleanup_callback.c'
source_filename = "/home/carl/AnghaBench/reactos/sdk/lib/rtl/extr_timerqueue.c_timer_cleanup_callback.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.queue_timer = type { i64, i64, %struct.timer_queue* }
%struct.timer_queue = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.queue_timer*)* @timer_cleanup_callback to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @timer_cleanup_callback(%struct.queue_timer* %0) #0 {
  %2 = alloca %struct.queue_timer*, align 8
  %3 = alloca %struct.timer_queue*, align 8
  store %struct.queue_timer* %0, %struct.queue_timer** %2, align 8
  %4 = load %struct.queue_timer*, %struct.queue_timer** %2, align 8
  %5 = getelementptr inbounds %struct.queue_timer, %struct.queue_timer* %4, i32 0, i32 2
  %6 = load %struct.timer_queue*, %struct.timer_queue** %5, align 8
  store %struct.timer_queue* %6, %struct.timer_queue** %3, align 8
  %7 = load %struct.timer_queue*, %struct.timer_queue** %3, align 8
  %8 = getelementptr inbounds %struct.timer_queue, %struct.timer_queue* %7, i32 0, i32 0
  %9 = call i32 @RtlEnterCriticalSection(i32* %8)
  %10 = load %struct.queue_timer*, %struct.queue_timer** %2, align 8
  %11 = getelementptr inbounds %struct.queue_timer, %struct.queue_timer* %10, i32 0, i32 0
  %12 = load i64, i64* %11, align 8
  %13 = icmp slt i64 0, %12
  %14 = zext i1 %13 to i32
  %15 = call i32 @assert(i32 %14)
  %16 = load %struct.queue_timer*, %struct.queue_timer** %2, align 8
  %17 = getelementptr inbounds %struct.queue_timer, %struct.queue_timer* %16, i32 0, i32 0
  %18 = load i64, i64* %17, align 8
  %19 = add nsw i64 %18, -1
  store i64 %19, i64* %17, align 8
  %20 = load %struct.queue_timer*, %struct.queue_timer** %2, align 8
  %21 = getelementptr inbounds %struct.queue_timer, %struct.queue_timer* %20, i32 0, i32 1
  %22 = load i64, i64* %21, align 8
  %23 = icmp ne i64 %22, 0
  br i1 %23, label %24, label %32

24:                                               ; preds = %1
  %25 = load %struct.queue_timer*, %struct.queue_timer** %2, align 8
  %26 = getelementptr inbounds %struct.queue_timer, %struct.queue_timer* %25, i32 0, i32 0
  %27 = load i64, i64* %26, align 8
  %28 = icmp eq i64 %27, 0
  br i1 %28, label %29, label %32

29:                                               ; preds = %24
  %30 = load %struct.queue_timer*, %struct.queue_timer** %2, align 8
  %31 = call i32 @queue_remove_timer(%struct.queue_timer* %30)
  br label %32

32:                                               ; preds = %29, %24, %1
  %33 = load %struct.timer_queue*, %struct.timer_queue** %3, align 8
  %34 = getelementptr inbounds %struct.timer_queue, %struct.timer_queue* %33, i32 0, i32 0
  %35 = call i32 @RtlLeaveCriticalSection(i32* %34)
  ret void
}

declare dso_local i32 @RtlEnterCriticalSection(i32*) #1

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @queue_remove_timer(%struct.queue_timer*) #1

declare dso_local i32 @RtlLeaveCriticalSection(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
